# complement

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: default.yaml  epoch_probe.yaml  fifty_epoch_seed0_batch128.yaml  full_seed0_150ep_batch128.yaml  full_seed0_80ep_batch128.yaml  hysteresis_mnist_groupnorm.yaml  input_pipeline_benchmark_base.yaml  input_pipeline_benchmark_workers.yaml  irreversibility_mnist_groupnorm.yaml  latent_dim_search.yaml  latent_dim_search_round3.yaml  mnist_groupnorm_seed0_150ep.yaml  mnist_seed0_150ep_beta0.yaml  mnist_speed.yaml  reconstruction_probe.yaml  replay_mnist_groupnorm.yaml  six_hour_seed0_batch128.yaml  slurm.yaml  smallnorb_groupnorm_seed0_200ep.yaml  smallnorb_seed0_200ep_batch128.yaml  smallnorb_seed0_200ep_beta0.yaml  smallnorb_seed0_80ep_batch128.yaml  smallnorb_speed.yaml  smoke.yaml  test_checkpoints_80.yaml  test_grid.yaml  test_grid_150.yaml  test_grid_mnist_150_beta0.yaml  test_grid_mnist_groupnorm_150.yaml  test_grid_smallnorb_200.yaml  test_grid_smallnorb_200_beta0.yaml  test_grid_smallnorb_80.yaml  test_grid_smallnorb_groupnorm_200.yaml
notebooks/: colab_training.ipynb
scripts/: benchmark_input_pipeline.py  launch_groupnorm_mnist_after_beta0.ps1  launch_groupnorm_smallnorb_after_mnist.ps1  migrate_results_layout.py  run_beta0_extensions.py  run_checkpoint_evaluations.py  run_epoch_probe.py  run_grid.py  run_hysteresis_sweep.py  run_irreversibility_probe.py  run_latent_dim_search.py  run_reconstruction_study.py  run_replay_study.py  run_slurm_task.py  run_test_grid.py  run_training_and_evaluation.py  (+3 more)
(+50 files in other folders)
